--- a/wordpress/upgrade/v4.md
+++ b/wordpress/upgrade/v4.md
@@ -1,14 +1,14 @@
 Upgrade Notice - Enlighter WordPress Plugin v4
 ==================================================
 
-Enlighter v4 is coming soon - including a new highlighting engine, languages and theme.
-
-Sadly..there is no full-automatic upgrade path available caused by its new architecture.
-Custom themes, css modifications and most of the settings have to be **manually converted!** 
-
-**Please take some time for testing before applying the v4 release to your website!**
-
-I apologize for the inconvenience.
+> Enlighter v4 is coming soon - including a new highlighting engine, languages and theme.
+> 
+> Sadly..there is no full-automatic upgrade path available caused by its new architecture.
+> Custom themes, css modifications and most of the settings have to be **manually converted!** 
+> 
+> **Please take some time for testing before applying the v4 release to your website!**
+> 
+> I apologize for the inconvenience.
 
 ### Related ###
 
