--- a/wordpress/upgrade/v4.md
+++ b/wordpress/upgrade/v4.md
@@ -1,7 +1,7 @@
 Upgrade Notice - Enlighter WordPress Plugin v4
 ==================================================
 
-> Enlighter v4 is coming soon - including a new highlighting engine, languages and theme.
+> Enlighter v4 has arrived - including a new highlighting engine, languages and theme.
 > 
 > Sadly..there is no full-automatic upgrade path available caused by its new architecture.
 > Custom themes, css modifications and most of the settings have to be **manually converted!** 
@@ -65,7 +65,7 @@ The "markup" structure of the editing plugins didn't changed and you can stil us
 
 ## Theme Customizer ##
 
-The whole plugin architecture and especially the underlying highlight engine [EnlighterJS v3](https://github.com/EnlighterJS/EnlighterJS) has been re-created from scratch. It contains a complete different highlighting structure based on [syntactic tokens]() Therefore the previous configuration of the existing Theme Customizer **cannot be converted** to the new format!
+The whole plugin architecture and especially the underlying highlight engine [EnlighterJS v3](https://github.com/EnlighterJS/EnlighterJS) has been re-created from scratch. It contains a complete different highlighting structure based on [syntactic tokens](https://github.com/EnlighterJS/documentation/blob/master/development/HighlightingEngine_and_Symbols.md) Therefore the previous configuration of the existing Theme Customizer **cannot be converted** to the new format! There is no relation between the systems.
 
 ## Custom Themes / CSS Modifications ##
 
