added system requirements

--- a/wordpress/upgrade/v4.md
+++ b/wordpress/upgrade/v4.md
@@ -57,6 +57,13 @@ The new version works standlone without any framework (no MooTools, no jQuery, n
 * Removed: Lighter.js legacy themes (Git, Mocha, MooTools, Panic, Tutti, Twilight)
 * Removed: most keyword lists from language files (direct regular expressions are used)
 
+### System requirements ###
+
+* WordPress `5.0`
+* PHP 7.0, including `json` functions
+* Modern webbrowser with enabled Javascript (required for highlighting)
+* Accessable cache directory (`/wp-content/plugins/enlighter/cache/`)
+
 ## Content/Codeblocks ##
 
 All of your Enlighter codeblocks within post/pages, shortcodes and markdown blocks will **continue to work without any changes**!
