added database cleanup query

--- a/wordpress/upgrade/v4.md
+++ b/wordpress/upgrade/v4.md
@@ -91,3 +91,17 @@ Please take some time to look into the settings page and adjust them.
 The webfonts loader (Google Fonts) has been removed.
 
 Since EnlighterJS v3 is using a native font stack (like bootstrap) it is not longer required do display code. If you want to include custom fonts please do it on your own.
+
+## Cleanup database ##
+
+The legacy Enlighter versions uses a lot of options which are stored in a seperate database row each. Thanks to the new plugin architecture, all options are stored in a single, serialized object. To cleanup your database, just run the following query to **delete all Enlighter v3 settings**
+
+Note: remember to modify the `wp_` installation prefix to match your environment!
+
+```sql
+DELETE FROM `wp_options` WHERE `option_name` LIKE 'enlighter-%' AND `option_name` NOT IN ('enlighter-version', 'enlighter-options', 'enlighter-customizer', 'enlighter-cache-hash');
+```
+
+## Missing Features ##
+
+* Preview mode of the theme customizer
