added downgrade guide; added index

--- a/wordpress/upgrade/v4.md
+++ b/wordpress/upgrade/v4.md
@@ -10,11 +10,87 @@ Upgrade Notice - Enlighter WordPress Plugin v4
 > 
 > I apologize for the inconvenience.
 
+### Content ###
+
+* [Content/Codeblocks](#contentcodeblocks)
+* [Theme Customizer](#theme-customizer)
+* [Custom Themes / CSS Modifications](#custom-themes--css-modifications)
+* [Plugin settings/options](#plugin-settingsoptions)
+* [Webfonts removed](#webfonts)
+* [Database cleanup](#cleanup-database)
+* [Downgrade to v3.11](#downgrade)
+* [Major Enhancements](#major-enhancements)
+
 ### Related ###
 
 * [EnlighterJS Documentation](https://github.com/EnlighterJS/documentation)
 * [EnlighterJS FAQ](https://github.com/EnlighterJS/documentation/blob/master/FAQ.md)
 * [CSS Tweaks](https://github.com/EnlighterJS/documentation/blob/master/Tweaks.md)
+
+### System requirements ###
+
+* WordPress `5.0`
+* PHP 7.0, including `json` functions
+* Modern webbrowser with enabled Javascript (required for highlighting)
+* Accessable cache directory (`/wp-content/plugins/enlighter/cache/`)
+
+## Content/Codeblocks ##
+
+All of your Enlighter codeblocks within post/pages, shortcodes and markdown blocks will **continue to work without any changes**!
+
+The "markup" structure of the editing plugins didn't changed and you can stil use your old post/pages with the new Enlighter version - it is **100% compatible**
+
+### Old shortcodes without language identifier ###
+
+Old Enlighter versions allowed you to create shortcodes without a language attribute set - the plugin was using the "default language" setting. This setting has been removed because all components of Enlighter sets the attribute explicitely. In case you're stil using this legacy markup you should/have to convert your code.
+
+## Theme Customizer ##
+
+The whole plugin architecture and especially the underlying highlight engine [EnlighterJS v3](https://github.com/EnlighterJS/EnlighterJS) has been re-created from scratch. It contains a complete different highlighting structure based on [syntactic tokens](https://github.com/EnlighterJS/documentation/blob/master/development/HighlightingEngine_and_Symbols.md) Therefore the previous configuration of the existing Theme Customizer **cannot be converted** to the new format! There is no relation between the systems.
+
+## Custom Themes / CSS Modifications ##
+
+In case you've created **custom themes** or applied some css changes to the EnlighterJS v2 themes, **this changes will be lost**!
+
+The new EnlighterJS v3 engine includes a completely different html markup and css structure rules which didn't have any similarities with the previous versions. 
+
+## Plugin settings/options ##
+
+Mostly all plugin settings have changed - therefore it was not possible to retain these options during the upgrade. Only the core options have been copied.
+
+Please take some time to look into the settings page and adjust them.
+
+## Webfonts ##
+
+The webfonts loader (Google Fonts) has been removed.
+
+Since EnlighterJS v3 is using a native font stack (like bootstrap) it is not longer required do display code. If you want to include custom fonts please do it on your own.
+
+## Cleanup database ##
+
+The legacy Enlighter versions uses a lot of options which are stored in a seperate database row each. Thanks to the new plugin architecture, all options are stored in a single, serialized object. To cleanup your database, just run the following query to **delete all Enlighter v3 settings**
+
+Note: remember to modify the `wp_` installation prefix to match your environment!
+
+```sql
+DELETE FROM `wp_options` WHERE `option_name` LIKE 'enlighter-%' AND `option_name` NOT IN ('enlighter-version', 'enlighter-options', 'enlighter-customizer', 'enlighter-cache-hash');
+```
+
+## Missing Features ##
+
+* Preview mode of the theme customizer
+
+## Downgrade ##
+
+In case something went wrong during the upgrade you can downgrade to Enlighter `v3.11` without any problems - the settings are stil in the database.
+
+1. Disable the Enlighter Plugin
+2. Remove the Enlighter Plugin
+3. Download the `v3.11` release from [wordpress.org](https://downloads.wordpress.org/plugin/enlighter.3.11.0.zip)
+4. Upload the content of the `.zip` file to the `/wp-content/plugins/enlighter` directory (has to be created manually)
+5. Activate the plugin through the ‘Plugins’ menu in WordPress
+
+**Please create a [bug report on GitHub](https://github.com/EnlighterJS/Plugin.WordPress/issues)**
 
 ## Major Enhancements ##
 
@@ -56,52 +132,3 @@ The new version works standlone without any framework (no MooTools, no jQuery, n
 * Removed: MooTools framework
 * Removed: Lighter.js legacy themes (Git, Mocha, MooTools, Panic, Tutti, Twilight)
 * Removed: most keyword lists from language files (direct regular expressions are used)
-
-### System requirements ###
-
-* WordPress `5.0`
-* PHP 7.0, including `json` functions
-* Modern webbrowser with enabled Javascript (required for highlighting)
-* Accessable cache directory (`/wp-content/plugins/enlighter/cache/`)
-
-## Content/Codeblocks ##
-
-All of your Enlighter codeblocks within post/pages, shortcodes and markdown blocks will **continue to work without any changes**!
-
-The "markup" structure of the editing plugins didn't changed and you can stil use your old post/pages with the new Enlighter version - it is **100% compatible**
-
-## Theme Customizer ##
-
-The whole plugin architecture and especially the underlying highlight engine [EnlighterJS v3](https://github.com/EnlighterJS/EnlighterJS) has been re-created from scratch. It contains a complete different highlighting structure based on [syntactic tokens](https://github.com/EnlighterJS/documentation/blob/master/development/HighlightingEngine_and_Symbols.md) Therefore the previous configuration of the existing Theme Customizer **cannot be converted** to the new format! There is no relation between the systems.
-
-## Custom Themes / CSS Modifications ##
-
-In case you've created **custom themes** or applied some css changes to the EnlighterJS v2 themes, **this changes will be lost**!
-
-The new EnlighterJS v3 engine includes a completely different html markup and css structure rules which didn't have any similarities with the previous versions. 
-
-## Plugin settings/options ##
-
-Mostly all plugin settings have changed - therefore it was not possible to retain these options during the upgrade. Only the core options have been copied.
-
-Please take some time to look into the settings page and adjust them.
-
-## Webfonts ##
-
-The webfonts loader (Google Fonts) has been removed.
-
-Since EnlighterJS v3 is using a native font stack (like bootstrap) it is not longer required do display code. If you want to include custom fonts please do it on your own.
-
-## Cleanup database ##
-
-The legacy Enlighter versions uses a lot of options which are stored in a seperate database row each. Thanks to the new plugin architecture, all options are stored in a single, serialized object. To cleanup your database, just run the following query to **delete all Enlighter v3 settings**
-
-Note: remember to modify the `wp_` installation prefix to match your environment!
-
-```sql
-DELETE FROM `wp_options` WHERE `option_name` LIKE 'enlighter-%' AND `option_name` NOT IN ('enlighter-version', 'enlighter-options', 'enlighter-customizer', 'enlighter-cache-hash');
-```
-
-## Missing Features ##
-
-* Preview mode of the theme customizer
