note about fallback language setting

--- a/wordpress/upgrade/v4.md
+++ b/wordpress/upgrade/v4.md
@@ -42,7 +42,8 @@ The "markup" structure of the editing plugins didn't changed and you can stil us
 
 ### Old shortcodes without language identifier ###
 
-Old Enlighter versions allowed you to create shortcodes without a language attribute set - the plugin was using the "default language" setting. This setting has been removed because all components of Enlighter sets the attribute explicitely. In case you're stil using this legacy markup you should/have to convert your code.
+Old Enlighter versions allowed you to create shortcodes without a language attribute set - the plugin was using the "default language" setting.
+For compatibility reasons this "fallback behaviour" of EnlighterJS can be controlled under `Enlighter -> Options -> Advanced -> EnlighterJS` - it's only required for legacy shortcodes created in previous plugin versions.
 
 ## Theme Customizer ##
 
